--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h1 {
   justify-content: center;
   text-decoration: none;
   transition: all 0.3s ease;
-  margin-left: auto;
+  margin: 0.3rem auto;
 }
 
 /* ✅ Wat gebeurt er bij afvinken */
